cmake: Set LTO as default.
With clang mixing LTO and non-LTO objects can lead with
linker failures.

Fixes https://github.com/ata4/angrylion-rdp-plus/issues/83

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ endif(MINGW)
 
 # set IPO option, if supported
 if(ENABLE_IPO AND (CMAKE_BUILD_TYPE STREQUAL "Release"))
-    set_target_properties(alp-core PROPERTIES INTERPROCEDURAL_OPTIMIZATION ON)
+    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
 endif()
 
 include_directories(${PATH_SRC})
