Enable RC to allow cmake to compile the UI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,8 @@ if(WIN32)
     set(NAME_PLUGIN_ZILMAR ${CMAKE_PROJECT_NAME})
     set(PATH_PLUGIN_ZILMAR "${PATH_SRC}/plugin/zilmar")
 
-    file(GLOB SOURCES_PLUGIN_ZILMAR "${PATH_PLUGIN_ZILMAR}/*.c")
+    enable_language(RC)
+    file(GLOB SOURCES_PLUGIN_ZILMAR "${PATH_PLUGIN_ZILMAR}/*.c" "${PATH_PLUGIN_ZILMAR}/*.rc")
     add_library(${NAME_PLUGIN_ZILMAR} SHARED ${SOURCES_PLUGIN_ZILMAR})
 
     set_target_properties(${NAME_PLUGIN_ZILMAR} PROPERTIES PREFIX "")
